fix: allow all headers